--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -88,17 +88,19 @@ body {
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
 }
 
 a {
   color: inherit;
   text-decoration: none;
+}
+
+button,
+input {
+  background: transparent;
+  cursor: pointer;
+  min-height: 50px;
+  min-width: 50px;
 }
 
 @media (prefers-color-scheme: dark) {
